2022-11-02  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an.tmac (TE): Update diagnostic to mention another
	failure mode: a man page that is simply a `so` request requires
	soelim(1) to be run if the sourced page uses tbl(1).

2022-11-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/xditview/xditview.am
	($(GXDITVIEW_GROFF_VERSION_H)): Run `$(MKDIR_P)` and `printf` as
	separate rule commands in order to use them with `$(AM_V_at)`
	and `$(AM_V_GEN)`, respectively.  Prevents noise from build.

	Fixes <https://savannah.gnu.org/bugs/?63302>.  Thanks to Bjarni
	Ingi Gislason for the report.

2022-10-31  G. Branden Robinson <g.branden.robinson@gmail.com>

	[eqn]: Fix Savannah #63299.

	* src/preproc/eqn/main.cpp: Revise input file line number
	handling.
	(read_line): Stop dealing with `current_lineno` here; it's now
	up to its caller (`do_file()`) to manipulate the line number.
	(do_file): When reading new file, initialize `current_lineno` to
	1 instead of 0.  Reset it to zero when encountering EOF (so that
	diagnostics will not include a line number at all).  When
	performing nested call to `read_line()` to gather '.EN' from
	input, increment the line number.  Write correct line number in
	output groff `lf` requests; in groff, its first argument assigns
	the number of the _next_ input line.  Increment line number at
	end of outer `read_line()` loop.

	Fixes <https://savannah.gnu.org/bugs/?63299>.  Thanks to Alex
	Colomar for the report.

2022-10-31  G. Branden Robinson <g.branden.robinson@gmail.com>

	[eqn]: Regression-test Savannah #63299.

	* src/preproc/eqn/tests/\
	diagnostics-report-correct-line-numbers.sh: Do it.
	* src/preproc/eqn/eqn.am (eqn_TESTS, TESTS, EXTRA_DIST): Run
	test.

2022-10-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/utils/grog/grog.pl (fail, warn, construct_command)
	(version): Restore trailing newlines to `print`ed output.  They